KUBERNETES/ingress/traefik/ingress/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - nginx.mahinraza.online
    secretName: wildcard-mahinraza-online
  rules:
    - host: nginx.mahinraza.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc-red
                port:
                  number: 80
